Prepare code for new Switch cluster